--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
             </style>
             <script>
                 $('#closetitle').click(function(){
+                    $('#inventory [data-tool=eye]').click();
                     scene('beach');
                 });
             </script>
